parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement statement_nullable
Rule 3     statement_nullable -> statement statement_nullable
Rule 4     statement_nullable -> empty
Rule 5     statement -> declaration_statement
Rule 6     statement -> synonym_statement
Rule 7     statement -> newmode_statement
Rule 8     statement -> action_statement
Rule 9     statement -> procedure_statement
Rule 10    synonym_statement -> SYN synonym_list SEMI
Rule 11    synonym_list -> synonym_definition
Rule 12    synonym_list -> synonym_definition COMMA synonym_list
Rule 13    synonym_definition -> identifier_list mode ASSIGN expression
Rule 14    synonym_definition -> identifier_list ASSIGN expression
Rule 15    declaration_statement -> DCL declaration_list SEMI
Rule 16    declaration_list -> declaration
Rule 17    declaration_list -> declaration COMMA declaration_list
Rule 18    declaration -> identifier_list mode initialization
Rule 19    declaration -> identifier_list mode
Rule 20    initialization -> ASSIGN expression
Rule 21    identifier_list -> identifier
Rule 22    identifier_list -> identifier COMMA identifier_list
Rule 23    identifier -> ID
Rule 24    newmode_statement -> TYPE newmode_list SEMI
Rule 25    newmode_list -> mode_definition
Rule 26    newmode_list -> mode_definition COMMA newmode_list
Rule 27    mode_definition -> identifier_list ASSIGN mode
Rule 28    procedure_statement -> ID COLON procedure_definition
Rule 29    procedure_definition -> PROC LPAREN formal_parameter_list RPAREN result_spec SEMI statement_nullable END SEMI
Rule 30    procedure_definition -> PROC LPAREN formal_parameter_list RPAREN SEMI statement_nullable END SEMI
Rule 31    procedure_definition -> PROC LPAREN RPAREN result_spec SEMI statement_nullable END SEMI
Rule 32    procedure_definition -> PROC LPAREN RPAREN SEMI statement_nullable END SEMI
Rule 33    formal_parameter_list -> formal_parameter
Rule 34    formal_parameter_list -> formal_parameter COMMA formal_parameter_list
Rule 35    formal_parameter -> identifier_list mode LOC
Rule 36    formal_parameter -> identifier_list mode
Rule 37    result_spec -> RETURNS LPAREN mode LOC RPAREN
Rule 38    result_spec -> RETURNS LPAREN mode RPAREN
Rule 39    mode -> mode_name
Rule 40    mode -> discrete_mode
Rule 41    mode -> reference_mode
Rule 42    mode -> composite_mode
Rule 43    mode_name -> identifier
Rule 44    discrete_mode -> integer_mode
Rule 45    discrete_mode -> boolean_mode
Rule 46    discrete_mode -> character_mode
Rule 47    discrete_mode -> discrete_range_mode
Rule 48    discrete_mode_name -> identifier
Rule 49    integer_mode -> INT
Rule 50    boolean_mode -> BOOL
Rule 51    character_mode -> CHAR
Rule 52    discrete_range_mode -> discrete_mode_name LPAREN literal_range RPAREN
Rule 53    discrete_range_mode -> discrete_mode LPAREN literal_range RPAREN
Rule 54    literal_range -> lower_bound COLON upper_bound
Rule 55    lower_bound -> expression
Rule 56    upper_bound -> expression
Rule 57    reference_mode -> REF mode
Rule 58    composite_mode -> string_mode
Rule 59    composite_mode -> array_mode
Rule 60    string_mode -> CHARS LBRACKET string_length RBRACKET
Rule 61    string_length -> integer_literal
Rule 62    array_mode -> ARRAY LBRACKET index_mode_list RBRACKET element_mode
Rule 63    index_mode_list -> index_mode
Rule 64    index_mode_list -> index_mode COMMA index_mode_list
Rule 65    index_mode -> discrete_mode
Rule 66    index_mode -> literal_range
Rule 67    element_mode -> mode
Rule 68    location -> identifier
Rule 69    location -> dereferenced_reference
Rule 70    location -> array_element
Rule 71    location -> array_slice
Rule 72    location -> call_action
Rule 73    dereferenced_reference -> array_location ARROW
Rule 74    array_element -> array_location LBRACKET expression_list RBRACKET
Rule 75    expression_list -> expression
Rule 76    expression_list -> expression COMMA expression_list
Rule 77    array_slice -> array_location LBRACKET lower_bound COLON upper_bound RBRACKET
Rule 78    array_location -> location
Rule 79    expression -> operand0
Rule 80    expression -> conditional_expression
Rule 81    parenthesized_expression -> LPAREN expression RPAREN
Rule 82    conditional_expression -> IF expression then_expression else_expression FI
Rule 83    conditional_expression -> IF expression then_expression elsif_expression else_expression FI
Rule 84    then_expression -> THEN expression
Rule 85    else_expression -> ELSE expression
Rule 86    elsif_expression -> ELSIF expression then_expression
Rule 87    elsif_expression -> elsif_expression ELSIF expression then_expression
Rule 88    operand0 -> operand1
Rule 89    operand0 -> operand0 operator1 operand1
Rule 90    operand1 -> operand2
Rule 91    operand1 -> operand1 operator2 operand2
Rule 92    operand2 -> operand3
Rule 93    operand2 -> operand2 arithmetic_multiplicative_operator operand3
Rule 94    operand3 -> monadic_operator operand4
Rule 95    operand3 -> operand4
Rule 96    operand4 -> array_location
Rule 97    operand4 -> referenced_location
Rule 98    operand4 -> primitive_value
Rule 99    arithmetic_multiplicative_operator -> TIMES
Rule 100   arithmetic_multiplicative_operator -> DIVIDE
Rule 101   arithmetic_multiplicative_operator -> MODULO
Rule 102   monadic_operator -> MINUS
Rule 103   monadic_operator -> NOT
Rule 104   referenced_location -> ARROW array_location
Rule 105   operator1 -> membership_operator
Rule 106   operator1 -> relational_operator
Rule 107   relational_operator -> AND
Rule 108   relational_operator -> OR
Rule 109   relational_operator -> EQUAL
Rule 110   relational_operator -> NOTEQ
Rule 111   relational_operator -> GREATER
Rule 112   relational_operator -> GTEQUAL
Rule 113   relational_operator -> LESS
Rule 114   relational_operator -> LTEQUAL
Rule 115   operator2 -> arithmetic_additive_operator
Rule 116   operator2 -> string_concatenation_operator
Rule 117   arithmetic_additive_operator -> PLUS
Rule 118   arithmetic_additive_operator -> MINUS
Rule 119   string_concatenation_operator -> CONCAT
Rule 120   membership_operator -> IN
Rule 121   primitive_value -> literal
Rule 122   primitive_value -> value_array_element
Rule 123   primitive_value -> value_array_slice
Rule 124   primitive_value -> parenthesized_expression
Rule 125   literal -> integer_literal
Rule 126   literal -> boolean_literal
Rule 127   literal -> character_literal
Rule 128   literal -> empty_literal
Rule 129   literal -> character_string_literal
Rule 130   value_array_element -> primitive_value LBRACKET expression_list RBRACKET
Rule 131   value_array_slice -> primitive_value LBRACKET expression COLON expression RBRACKET
Rule 132   integer_literal -> ICONST
Rule 133   boolean_literal -> TRUE
Rule 134   boolean_literal -> FALSE
Rule 135   character_literal -> CCONST
Rule 136   character_literal -> HAT LPAREN ICONST RPAREN
Rule 137   empty_literal -> NULL
Rule 138   character_string_literal -> SCONST
Rule 139   action_statement -> identifier COLON action SEMI
Rule 140   action_statement -> action SEMI
Rule 141   action -> bracketed_action
Rule 142   action -> assignment_action
Rule 143   action -> call_action
Rule 144   action -> exit_action
Rule 145   action -> result_action
Rule 146   action -> return_action
Rule 147   bracketed_action -> if_action
Rule 148   bracketed_action -> do_action
Rule 149   assignment_action -> array_location assigning_operator expression
Rule 150   assigning_operator -> closed_dyadic_operator ASSIGN
Rule 151   assigning_operator -> ASSIGN
Rule 152   closed_dyadic_operator -> arithmetic_additive_operator
Rule 153   closed_dyadic_operator -> arithmetic_multiplicative_operator
Rule 154   closed_dyadic_operator -> string_concatenation_operator
Rule 155   if_action -> IF expression then_clause else_clause FI
Rule 156   if_action -> IF expression then_clause FI
Rule 157   then_clause -> THEN action_statement_list
Rule 158   else_clause -> ELSE action_statement_list
Rule 159   else_clause -> ELSIF expression then_clause else_clause
Rule 160   else_clause -> ELSIF expression then_clause
Rule 161   action_statement_list -> action_statement action_statement_nullable
Rule 162   action_statement_nullable -> action_statement action_statement_nullable
Rule 163   action_statement_nullable -> empty
Rule 164   call_action -> procedure_call
Rule 165   call_action -> builtin_call
Rule 166   builtin_call -> builtin_name LPAREN parameter_list RPAREN
Rule 167   builtin_call -> builtin_name LPAREN RPAREN
Rule 168   builtin_name -> ABS
Rule 169   builtin_name -> ASC
Rule 170   builtin_name -> NUM
Rule 171   builtin_name -> UPPER
Rule 172   builtin_name -> LOWER
Rule 173   builtin_name -> LENGTH
Rule 174   builtin_name -> READ
Rule 175   builtin_name -> PRINT
Rule 176   procedure_call -> ID LPAREN parameter_list RPAREN
Rule 177   procedure_call -> ID LPAREN RPAREN
Rule 178   parameter_list -> expression
Rule 179   parameter_list -> expression COMMA parameter_list
Rule 180   exit_action -> EXIT identifier
Rule 181   return_action -> RETURN result
Rule 182   result -> expression
Rule 183   result -> empty
Rule 184   result_action -> RESULT expression
Rule 185   do_action -> DO control_part SEMI action_statement_nullable OD
Rule 186   do_action -> DO action_statement_nullable OD
Rule 187   control_part -> for_control while_control
Rule 188   control_part -> for_control
Rule 189   control_part -> while_control
Rule 190   for_control -> FOR iteration
Rule 191   iteration -> step_enumeration
Rule 192   iteration -> range_enumeration
Rule 193   step_enumeration -> identifier ASSIGN expression step_value DOWN end_value
Rule 194   step_enumeration -> identifier ASSIGN expression step_value end_value
Rule 195   step_enumeration -> identifier ASSIGN expression DOWN end_value
Rule 196   step_enumeration -> identifier ASSIGN expression end_value
Rule 197   step_value -> BY expression
Rule 198   end_value -> TO expression
Rule 199   range_enumeration -> identifier DOWN IN discrete_mode
Rule 200   range_enumeration -> identifier IN discrete_mode
Rule 201   while_control -> WHILE expression
Rule 202   empty -> <empty>

Terminals, with rules where they appear

ABS                  : 168
AND                  : 107
ARRAY                : 62
ARROW                : 73 104
ASC                  : 169
ASSIGN               : 13 14 20 27 150 151 193 194 195 196
BOOL                 : 50
BY                   : 197
CCONST               : 135
CHAR                 : 51
CHARS                : 60
COLON                : 28 54 77 131 139
COMMA                : 12 17 22 26 34 64 76 179
CONCAT               : 119
DCL                  : 15
DIVIDE               : 100
DO                   : 185 186
DOWN                 : 193 195 199
ELSE                 : 85 158
ELSIF                : 86 87 159 160
END                  : 29 30 31 32
EQUAL                : 109
EXIT                 : 180
FALSE                : 134
FI                   : 82 83 155 156
FOR                  : 190
GREATER              : 111
GTEQUAL              : 112
HAT                  : 136
ICONST               : 132 136
ID                   : 23 28 176 177
IF                   : 82 83 155 156
IN                   : 120 199 200
INT                  : 49
LBRACKET             : 60 62 74 77 130 131
LENGTH               : 173
LESS                 : 113
LOC                  : 35 37
LOWER                : 172
LPAREN               : 29 30 31 32 37 38 52 53 81 136 166 167 176 177
LTEQUAL              : 114
MINUS                : 102 118
MODULO               : 101
NOT                  : 103
NOTEQ                : 110
NULL                 : 137
NUM                  : 170
OD                   : 185 186
OR                   : 108
PLUS                 : 117
PRINT                : 175
PROC                 : 29 30 31 32
RBRACKET             : 60 62 74 77 130 131
READ                 : 174
REF                  : 57
RESULT               : 184
RETURN               : 181
RETURNS              : 37 38
RPAREN               : 29 30 31 32 37 38 52 53 81 136 166 167 176 177
SCONST               : 138
SEMI                 : 10 15 24 29 29 30 30 31 31 32 32 139 140 185
SYN                  : 10
THEN                 : 84 157
TIMES                : 99
TO                   : 198
TRUE                 : 133
TYPE                 : 24
UPPER                : 171
WHILE                : 201
error                : 

Nonterminals, with rules where they appear

action               : 139 140
action_statement     : 8 161 162
action_statement_list : 157 158
action_statement_nullable : 161 162 185 186
arithmetic_additive_operator : 115 152
arithmetic_multiplicative_operator : 93 153
array_element        : 70
array_location       : 73 74 77 96 104 149
array_mode           : 59
array_slice          : 71
assigning_operator   : 149
assignment_action    : 142
boolean_literal      : 126
boolean_mode         : 45
bracketed_action     : 141
builtin_call         : 165
builtin_name         : 166 167
call_action          : 72 143
character_literal    : 127
character_mode       : 46
character_string_literal : 129
closed_dyadic_operator : 150
composite_mode       : 42
conditional_expression : 80
control_part         : 185
declaration          : 16 17
declaration_list     : 15 17
declaration_statement : 5
dereferenced_reference : 69
discrete_mode        : 40 53 65 199 200
discrete_mode_name   : 52
discrete_range_mode  : 47
do_action            : 148
element_mode         : 62
else_clause          : 155 159
else_expression      : 82 83
elsif_expression     : 83 87
empty                : 4 163 183
empty_literal        : 128
end_value            : 193 194 195 196
exit_action          : 144
expression           : 13 14 20 55 56 75 76 81 82 83 84 85 86 87 131 131 149 155 156 159 160 178 179 182 184 193 194 195 196 197 198 201
expression_list      : 74 76 130
for_control          : 187 188
formal_parameter     : 33 34
formal_parameter_list : 29 30 34
identifier           : 21 22 43 48 68 139 180 193 194 195 196 199 200
identifier_list      : 13 14 18 19 22 27 35 36
if_action            : 147
index_mode           : 63 64
index_mode_list      : 62 64
initialization       : 18
integer_literal      : 61 125
integer_mode         : 44
iteration            : 190
literal              : 121
literal_range        : 52 53 66
location             : 78
lower_bound          : 54 77
membership_operator  : 105
mode                 : 13 18 19 27 35 36 37 38 57 67
mode_definition      : 25 26
mode_name            : 39
monadic_operator     : 94
newmode_list         : 24 26
newmode_statement    : 7
operand0             : 79 89
operand1             : 88 89 91
operand2             : 90 91 93
operand3             : 92 93
operand4             : 94 95
operator1            : 89
operator2            : 91
parameter_list       : 166 176 179
parenthesized_expression : 124
primitive_value      : 98 130 131
procedure_call       : 164
procedure_definition : 28
procedure_statement  : 9
program              : 0
range_enumeration    : 192
reference_mode       : 41
referenced_location  : 97
relational_operator  : 106
result               : 181
result_action        : 145
result_spec          : 29 31
return_action        : 146
statement            : 2 3
statement_list       : 1
statement_nullable   : 2 3 29 30 31 32
step_enumeration     : 191
step_value           : 193 194
string_concatenation_operator : 116 154
string_length        : 60
string_mode          : 58
synonym_definition   : 11 12
synonym_list         : 10 12
synonym_statement    : 6
then_clause          : 155 156 159 160
then_expression      : 82 83 86 87
upper_bound          : 54 77
value_array_element  : 122
value_array_slice    : 123
while_control        : 187 189

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement statement_nullable
    (5) statement -> . declaration_statement
    (6) statement -> . synonym_statement
    (7) statement -> . newmode_statement
    (8) statement -> . action_statement
    (9) statement -> . procedure_statement
    (15) declaration_statement -> . DCL declaration_list SEMI
    (10) synonym_statement -> . SYN synonym_list SEMI
    (24) newmode_statement -> . TYPE newmode_list SEMI
    (139) action_statement -> . identifier COLON action SEMI
    (140) action_statement -> . action SEMI
    (28) procedure_statement -> . ID COLON procedure_definition
    (23) identifier -> . ID
    (141) action -> . bracketed_action
    (142) action -> . assignment_action
    (143) action -> . call_action
    (144) action -> . exit_action
    (145) action -> . result_action
    (146) action -> . return_action
    (147) bracketed_action -> . if_action
    (148) bracketed_action -> . do_action
    (149) assignment_action -> . array_location assigning_operator expression
    (164) call_action -> . procedure_call
    (165) call_action -> . builtin_call
    (180) exit_action -> . EXIT identifier
    (184) result_action -> . RESULT expression
    (181) return_action -> . RETURN result
    (155) if_action -> . IF expression then_clause else_clause FI
    (156) if_action -> . IF expression then_clause FI
    (185) do_action -> . DO control_part SEMI action_statement_nullable OD
    (186) do_action -> . DO action_statement_nullable OD
    (78) array_location -> . location
    (176) procedure_call -> . ID LPAREN parameter_list RPAREN
    (177) procedure_call -> . ID LPAREN RPAREN
    (166) builtin_call -> . builtin_name LPAREN parameter_list RPAREN
    (167) builtin_call -> . builtin_name LPAREN RPAREN
    (68) location -> . identifier
    (69) location -> . dereferenced_reference
    (70) location -> . array_element
    (71) location -> . array_slice
    (72) location -> . call_action
    (168) builtin_name -> . ABS
    (169) builtin_name -> . ASC
    (170) builtin_name -> . NUM
    (171) builtin_name -> . UPPER
    (172) builtin_name -> . LOWER
    (173) builtin_name -> . LENGTH
    (174) builtin_name -> . READ
    (175) builtin_name -> . PRINT
    (73) dereferenced_reference -> . array_location ARROW
    (74) array_element -> . array_location LBRACKET expression_list RBRACKET
    (77) array_slice -> . array_location LBRACKET lower_bound COLON upper_bound RBRACKET

    DCL             shift and go to state 2
    SYN             shift and go to state 33
    TYPE            shift and go to state 8
    ID              shift and go to state 13
    EXIT            shift and go to state 38
    RESULT          shift and go to state 15
    RETURN          shift and go to state 41
    IF              shift and go to state 16
    DO              shift and go to state 30
    ABS             shift and go to state 22
    ASC             shift and go to state 28
    NUM             shift and go to state 4
    UPPER           shift and go to state 7
    LOWER           shift and go to state 6
    LENGTH          shift and go to state 11
    READ            shift and go to state 20
    PRINT           shift and go to state 23

    newmode_statement              shift and go to state 21
    if_action                      shift and go to state 17
    statement_list                 shift and go to state 29
    array_element                  shift and go to state 1
    array_slice                    shift and go to state 3
    result_action                  shift and go to state 25
    action                         shift and go to state 5
    synonym_statement              shift and go to state 27
    builtin_name                   shift and go to state 9
    do_action                      shift and go to state 32
    procedure_call                 shift and go to state 10
    identifier                     shift and go to state 31
    declaration_statement          shift and go to state 34
    array_location                 shift and go to state 35
    location                       shift and go to state 36
    builtin_call                   shift and go to state 37
    program                        shift and go to state 14
    bracketed_action               shift and go to state 12
    procedure_statement            shift and go to state 18
    assignment_action              shift and go to state 39
    action_statement               shift and go to state 24
    call_action                    shift and go to state 26
    dereferenced_reference         shift and go to state 40
    return_action                  shift and go to state 42
    exit_action                    shift and go to state 19
    statement                      shift and go to state 43

state 1

    (70) location -> array_element .

    ARROW           reduce using rule 70 (location -> array_element .)
    LBRACKET        reduce using rule 70 (location -> array_element .)
    TIMES           reduce using rule 70 (location -> array_element .)
    DIVIDE          reduce using rule 70 (location -> array_element .)
    MODULO          reduce using rule 70 (location -> array_element .)
    PLUS            reduce using rule 70 (location -> array_element .)
    MINUS           reduce using rule 70 (location -> array_element .)
    CONCAT          reduce using rule 70 (location -> array_element .)
    IN              reduce using rule 70 (location -> array_element .)
    AND             reduce using rule 70 (location -> array_element .)
    OR              reduce using rule 70 (location -> array_element .)
    EQUAL           reduce using rule 70 (location -> array_element .)
    NOTEQ           reduce using rule 70 (location -> array_element .)
    GREATER         reduce using rule 70 (location -> array_element .)
    GTEQUAL         reduce using rule 70 (location -> array_element .)
    LESS            reduce using rule 70 (location -> array_element .)
    LTEQUAL         reduce using rule 70 (location -> array_element .)
    SEMI            reduce using rule 70 (location -> array_element .)
    THEN            reduce using rule 70 (location -> array_element .)
    COMMA           reduce using rule 70 (location -> array_element .)
    RPAREN          reduce using rule 70 (location -> array_element .)
    RBRACKET        reduce using rule 70 (location -> array_element .)
    COLON           reduce using rule 70 (location -> array_element .)
    ELSE            reduce using rule 70 (location -> array_element .)
    ELSIF           reduce using rule 70 (location -> array_element .)
    DOWN            reduce using rule 70 (location -> array_element .)
    BY              reduce using rule 70 (location -> array_element .)
    TO              reduce using rule 70 (location -> array_element .)
    FI              reduce using rule 70 (location -> array_element .)
    WHILE           reduce using rule 70 (location -> array_element .)
    ASSIGN          reduce using rule 70 (location -> array_element .)


state 2

    (15) declaration_statement -> DCL . declaration_list SEMI
    (16) declaration_list -> . declaration
    (17) declaration_list -> . declaration COMMA declaration_list
    (18) declaration -> . identifier_list mode initialization
    (19) declaration -> . identifier_list mode
    (21) identifier_list -> . identifier
    (22) identifier_list -> . identifier COMMA identifier_list
    (23) identifier -> . ID

    ID              shift and go to state 47

    declaration                    shift and go to state 44
    identifier_list                shift and go to state 45
    declaration_list               shift and go to state 46
    identifier                     shift and go to state 48

state 3

    (71) location -> array_slice .

    ARROW           reduce using rule 71 (location -> array_slice .)
    LBRACKET        reduce using rule 71 (location -> array_slice .)
    TIMES           reduce using rule 71 (location -> array_slice .)
    DIVIDE          reduce using rule 71 (location -> array_slice .)
    MODULO          reduce using rule 71 (location -> array_slice .)
    PLUS            reduce using rule 71 (location -> array_slice .)
    MINUS           reduce using rule 71 (location -> array_slice .)
    CONCAT          reduce using rule 71 (location -> array_slice .)
    IN              reduce using rule 71 (location -> array_slice .)
    AND             reduce using rule 71 (location -> array_slice .)
    OR              reduce using rule 71 (location -> array_slice .)
    EQUAL           reduce using rule 71 (location -> array_slice .)
    NOTEQ           reduce using rule 71 (location -> array_slice .)
    GREATER         reduce using rule 71 (location -> array_slice .)
    GTEQUAL         reduce using rule 71 (location -> array_slice .)
    LESS            reduce using rule 71 (location -> array_slice .)
    LTEQUAL         reduce using rule 71 (location -> array_slice .)
    SEMI            reduce using rule 71 (location -> array_slice .)
    THEN            reduce using rule 71 (location -> array_slice .)
    COMMA           reduce using rule 71 (location -> array_slice .)
    RPAREN          reduce using rule 71 (location -> array_slice .)
    RBRACKET        reduce using rule 71 (location -> array_slice .)
    COLON           reduce using rule 71 (location -> array_slice .)
    ELSE            reduce using rule 71 (location -> array_slice .)
    ELSIF           reduce using rule 71 (location -> array_slice .)
    DOWN            reduce using rule 71 (location -> array_slice .)
    BY              reduce using rule 71 (location -> array_slice .)
    TO              reduce using rule 71 (location -> array_slice .)
    FI              reduce using rule 71 (location -> array_slice .)
    WHILE           reduce using rule 71 (location -> array_slice .)
    ASSIGN          reduce using rule 71 (location -> array_slice .)


state 4

    (170) builtin_name -> NUM .

    LPAREN          reduce using rule 170 (builtin_name -> NUM .)


state 5

    (140) action_statement -> action . SEMI

    SEMI            shift and go to state 49


state 6

    (172) builtin_name -> LOWER .

    LPAREN          reduce using rule 172 (builtin_name -> LOWER .)


state 7

    (171) builtin_name -> UPPER .

    LPAREN          reduce using rule 171 (builtin_name -> UPPER .)


state 8

    (24) newmode_statement -> TYPE . newmode_list SEMI
    (25) newmode_list -> . mode_definition
    (26) newmode_list -> . mode_definition COMMA newmode_list
    (27) mode_definition -> . identifier_list ASSIGN mode
    (21) identifier_list -> . identifier
    (22) identifier_list -> . identifier COMMA identifier_list
    (23) identifier -> . ID

    ID              shift and go to state 47

    identifier_list                shift and go to state 50
    mode_definition                shift and go to state 51
    newmode_list                   shift and go to state 52
    identifier                     shift and go to state 48

state 9

    (166) builtin_call -> builtin_name . LPAREN parameter_list RPAREN
    (167) builtin_call -> builtin_name . LPAREN RPAREN

    LPAREN          shift and go to state 53


state 10

    (164) call_action -> procedure_call .

    SEMI            reduce using rule 164 (call_action -> procedure_call .)
    ARROW           reduce using rule 164 (call_action -> procedure_call .)
    LBRACKET        reduce using rule 164 (call_action -> procedure_call .)
    ASSIGN          reduce using rule 164 (call_action -> procedure_call .)
    PLUS            reduce using rule 164 (call_action -> procedure_call .)
    MINUS           reduce using rule 164 (call_action -> procedure_call .)
    TIMES           reduce using rule 164 (call_action -> procedure_call .)
    DIVIDE          reduce using rule 164 (call_action -> procedure_call .)
    MODULO          reduce using rule 164 (call_action -> procedure_call .)
    CONCAT          reduce using rule 164 (call_action -> procedure_call .)
    IN              reduce using rule 164 (call_action -> procedure_call .)
    AND             reduce using rule 164 (call_action -> procedure_call .)
    OR              reduce using rule 164 (call_action -> procedure_call .)
    EQUAL           reduce using rule 164 (call_action -> procedure_call .)
    NOTEQ           reduce using rule 164 (call_action -> procedure_call .)
    GREATER         reduce using rule 164 (call_action -> procedure_call .)
    GTEQUAL         reduce using rule 164 (call_action -> procedure_call .)
    LESS            reduce using rule 164 (call_action -> procedure_call .)
    LTEQUAL         reduce using rule 164 (call_action -> procedure_call .)
    COMMA           reduce using rule 164 (call_action -> procedure_call .)
    RBRACKET        reduce using rule 164 (call_action -> procedure_call .)
    COLON           reduce using rule 164 (call_action -> procedure_call .)
    RPAREN          reduce using rule 164 (call_action -> procedure_call .)
    THEN            reduce using rule 164 (call_action -> procedure_call .)
    ELSE            reduce using rule 164 (call_action -> procedure_call .)
    ELSIF           reduce using rule 164 (call_action -> procedure_call .)
    DOWN            reduce using rule 164 (call_action -> procedure_call .)
    BY              reduce using rule 164 (call_action -> procedure_call .)
    TO              reduce using rule 164 (call_action -> procedure_call .)
    FI              reduce using rule 164 (call_action -> procedure_call .)
    WHILE           reduce using rule 164 (call_action -> procedure_call .)


state 11

    (173) builtin_name -> LENGTH .

    LPAREN          reduce using rule 173 (builtin_name -> LENGTH .)


state 12

    (141) action -> bracketed_action .

    SEMI            reduce using rule 141 (action -> bracketed_action .)


state 13

    (28) procedure_statement -> ID . COLON procedure_definition
    (23) identifier -> ID .
    (176) procedure_call -> ID . LPAREN parameter_list RPAREN
    (177) procedure_call -> ID . LPAREN RPAREN

  ! shift/reduce conflict for COLON resolved as shift
    COLON           shift and go to state 55
    ARROW           reduce using rule 23 (identifier -> ID .)
    LBRACKET        reduce using rule 23 (identifier -> ID .)
    ASSIGN          reduce using rule 23 (identifier -> ID .)
    PLUS            reduce using rule 23 (identifier -> ID .)
    MINUS           reduce using rule 23 (identifier -> ID .)
    TIMES           reduce using rule 23 (identifier -> ID .)
    DIVIDE          reduce using rule 23 (identifier -> ID .)
    MODULO          reduce using rule 23 (identifier -> ID .)
    CONCAT          reduce using rule 23 (identifier -> ID .)
    LPAREN          shift and go to state 54

  ! COLON           [ reduce using rule 23 (identifier -> ID .) ]


state 14

    (0) S' -> program .



state 15

    (184) result_action -> RESULT . expression
    (79) expression -> . operand0
    (80) expression -> . conditional_expression
    (88) operand0 -> . operand1
    (89) operand0 -> . operand0 operator1 operand1
    (82) conditional_expression -> . IF expression then_expression else_expression FI
    (83) conditional_expression -> . IF expression then_expression elsif_expression else_expression FI
    (90) operand1 -> . operand2
    (91) operand1 -> . operand1 operator2 operand2
    (92) operand2 -> . operand3
    (93) operand2 -> . operand2 arithmetic_multiplicative_operator operand3
    (94) operand3 -> . monadic_operator operand4
    (95) operand3 -> . operand4
    (102) monadic_operator -> . MINUS
    (103) monadic_operator -> . NOT
    (96) operand4 -> . array_location
    (97) operand4 -> . referenced_location
    (98) operand4 -> . primitive_value
    (78) array_location -> . location
    (104) referenced_location -> . ARROW array_location
    (121) primitive_value -> . literal
    (122) primitive_value -> . value_array_element
    (123) primitive_value -> . value_array_slice
    (124) primitive_value -> . parenthesized_expression
    (68) location -> . identifier
    (69) location -> . dereferenced_reference
    (70) location -> . array_element
    (71) location -> . array_slice
    (72) location -> . call_action
    (125) literal -> . integer_literal
    (126) literal -> . boolean_literal
    (127) literal -> . character_literal
    (128) literal -> . empty_literal
    (129) literal -> . character_string_literal
    (130) value_array_element -> . primitive_value LBRACKET expression_list RBRACKET
    (131) value_array_slice -> . primitive_value LBRACKET expression COLON expression RBRACKET
    (81) parenthesized_expression -> . LPAREN expression RPAREN
    (23) identifier -> . ID
    (73) dereferenced_reference -> . array_location ARROW
    (74) array_element -> . array_location LBRACKET expression_list RBRACKET
    (77) array_slice -> . array_location LBRACKET lower_bound COLON upper_bound RBRACKET
    (164) call_action -> . procedure_call
    (165) call_action -> . builtin_call
    (132) integer_literal -> . ICONST
    (133) boolean_literal -> . TRUE
    (134) boolean_literal -> . FALSE
    (135) character_literal -> . CCONST
    (136) character_literal -> . HAT LPAREN ICONST RPAREN
    (137) empty_literal -> . NULL
    (138) character_string_literal -> . SCONST
    (176) procedure_call -> . ID LPAREN parameter_list RPAREN
    (177) procedure_call -> . ID LPAREN RPAREN
    (166) builtin_call -> . builtin_name LPAREN parameter_list RPAREN
    (167) builtin_call -> . builtin_name LPAREN RPAREN
    (168) builtin_name -> . ABS
    (169) builtin_name -> . ASC
    (170) builtin_name -> . NUM
    (171) builtin_name -> . UPPER
    (172) builtin_name -> . LOWER
    (173) builtin_name -> . LENGTH
    (174) builtin_name -> . READ
    (175) builtin_name -> . PRINT

    IF              shift and go to state 70
    MINUS           shift and go to state 85
    NOT             shift and go to state 83
    ARROW           shift and go to state 75
    LPAREN          shift and go to state 87
    ID              shift and go to state 66
    ICONST          shift and go to state 60
    TRUE            shift and go to state 61
    FALSE           shift and go to state 81
    CCONST          shift and go to state 71
    HAT             shift and go to state 68
    NULL            shift and go to state 73
    SCONST          shift and go to state 82
    ABS             shift and go to state 22
    ASC             shift and go to state 28
    NUM             shift and go to state 4
    UPPER           shift and go to state 7
    LOWER           shift and go to state 6
    LENGTH          shift and go to state 11
    READ            shift and go to state 20
    PRINT           shift and go to state 23

    operand2                       shift and go to state 56
    monadic_operator               shift and go to state 57
    value_array_element            shift and go to state 76
    operand4                       shift and go to state 77
    literal                        shift and go to state 58
    boolean_literal                shift and go to state 78
    character_string_literal       shift and go to state 59
    operand1                       shift and go to state 67
    conditional_expression         shift and go to state 79
    primitive_value                shift and go to state 80
    procedure_call                 shift and go to state 10
    operand3                       shift and go to state 62
    builtin_call                   shift and go to state 37
    array_element                  shift and go to state 1
    identifier                     shift and go to state 84
    value_array_slice              shift and go to state 63
    expression                     shift and go to state 64
    builtin_name                   shift and go to state 9
    array_location                 shift and go to state 90
    operand0                       shift and go to state 65
    location                       shift and go to state 36
    character_literal              shift and go to state 69
    dereferenced_reference         shift and go to state 40
    integer_literal                shift and go to state 74
    empty_literal                  shift and go to state 88
    call_action                    shift and go to state 89
    parenthesized_expression       shift and go to state 72
    array_slice                    shift and go to state 3
    referenced_location            shift and go to state 86

state 16
